--- a/sportsio/templates/admin_side/admin_login.html
+++ b/sportsio/templates/admin_side/admin_login.html
@@ -22,10 +22,10 @@
           <div class="col-md-8 col-lg-6 col-xxl-3">
             <div class="card mb-0">
               <div class="card-body">
-                <a href="./index.html" class="text-nowrap logo-img text-center d-block py-3 w-100">
-                  <img src="../assets/images/logos/dark-logo.svg" width="180" alt="">
+                <a href="#" class="text-nowrap logo-img text-center d-block py-3 w-100">
+                  <img src="{% static 'assets/admin_side/images/logos/dark-logo.png' %}" width="180" alt="">
                 </a>
-                <p class="text-center">Your Social Campaigns</p>
+                <p class="text-center">Admin Login</p>
                 <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
@@ -36,13 +36,18 @@
                       <label for="exampleInputPassword1" class="form-label">Password</label>
                       <input type="password" class="form-control" name="password" id="exampleInputPassword1">
                     </div>
-                    <div class="d-flex align-items-center justify-content-between mb-4">
+                    <div class="d-flex align-items-center justify-content-center mb-3">
                       <div class="form-check">
-                        <input class="form-check-input primary" type="checkbox" value="" id="flexCheckChecked" checked>
-                        <label class="form-check-label text-dark" for="flexCheckChecked">
-                          Remeber this Device
-                        </label>
+                        {% if messages %}
+                        <ul class="alert alert-danger mt-3">
+                            {% for message in messages %}
+                              <li>{{ message }}</li>
+                            {% endfor %}
+                          </ul>
                       </div>
+
+  {% endif %}
+
                 
                     </div>
                     <button class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Sign In</button>
