--- a/sportsio/templates/user_side/order_checkout.html
+++ b/sportsio/templates/user_side/order_checkout.html
@@ -338,7 +338,7 @@
                 
                 if (totalAmount > 0) {
                     var options = {
-                        "key": "rzp_test_G7fjGttWAWG2Bd", // Replace with your Razorpay Key ID
+                        "key": "rzp_test_VArbI2Nu4Yi1Iw", // Replace with your Razorpay Key ID
                         "amount": totalAmount * 100, // Amount is in currency subunits. Convert to paisa
                         "currency": "INR",
                         "name": "QickMart", // Your business name
