--- a/sportsio/templates/admin_side/base.html
+++ b/sportsio/templates/admin_side/base.html
@@ -8,6 +8,9 @@
   <title>{%block title%}Admin | Sportsio{%endblock%}</title>
   <link rel="shortcut icon" type="image/png" href="{% static 'assets/admin_side/images/logos/favicon.png' %}" />
   <link rel="stylesheet" href="{% static 'assets/admin_side/css/styles.min.css' %}" />
+   <!-- Font Awesome -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+  
 </head>
 
 <body>
