--- a/sportsio/templates/user_side/product-view.html
+++ b/sportsio/templates/user_side/product-view.html
@@ -302,6 +302,7 @@
                                         
                                             <!-- Form content starts here -->
                                             <h2>Write a review</h2>
+                                            {% if user.is_authenticated%}
                                             <div class="form-group required">
                                                 <div class="col-sm-12 p-0">
                                                     <!-- Hidden input for product ID -->
@@ -309,7 +310,9 @@
                                                     
                                                     <!-- Readonly input for customer's email -->
                                                     <label>Your Email <span class="required">*</span></label>
+                                                    
                                                     <input class="review-input" value="{{email}}" type="email" name="con_email" id="con_email" readonly>
+                                                    
                                                 </div>
                                             </div>
                                             <div class="form-group last-child required">
@@ -343,6 +346,9 @@
                                             </div>
                                         </form>
                                     </div>
+                                    {%else%}
+                                    <span> <a class="text-monospace font-weight-bold "  href="{% url 'login'%}">Login</a> to write review</span>
+                                    {%endif%}
                                 </div>
                             </div>
                         </div>
